<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

   <com.google.android.material.appbar.AppBarLayout
       android:layout_width="match_parent"
       android:layout_height="?actionBarSize"
       android:background="@color/colorPrimaryDark">

       <com.google.android.material.appbar.MaterialToolbar
           android:id="@+id/toolBar"
           app:title="@string/lbl_discover"
           app:titleTextColor="@color/white"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:titleCentered="true"/>

   </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner" />

                <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                    android:id="@+id/dotsBannerIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    app:dampingRatio="0.5"
                    app:dotsColor="@color/colorAccent"
                    app:dotsStrokeColor="@android:color/white"
                    app:dotsCornerRadius="@dimen/margin_medium"
                    app:dotsSize="@dimen/margin_medium"
                    app:dotsSpacing="@dimen/margin_small"
                    app:dotsWidthFactor="1"
                    app:progressMode="false"
                    app:dotsStrokeWidth="2dp"
                    app:stiffness="300" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularFilmAndSerialsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flBanner"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_best_popular_films_and_serials"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"/>

            <include
                android:id="@+id/vpBestPopularMovieList"
                android:layout_below="@id/tvBestPopularFilmAndSerialsLabel"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/view_pod_movie_list" />

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_show_times"
                android:layout_below="@id/vpBestPopularMovieList"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:background="@color/colorPrimaryLight">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_check_movie_show_time"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_heading_1x"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_3"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:text="@string/lbl_see_more"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="@dimen/margin_medium_2"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckMovieShowTimeLocation"
                    android:layout_width="@dimen/margin_xxlarge"
                    android:layout_height="@dimen/margin_xxlarge"
                    app:srcCompat="@drawable/ic_baseline_location_on_white_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"/>


            </RelativeLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlCheckMovieShowTime"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@color/colorPrimary"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/colorSecondaryText"/>

            <FrameLayout
                android:id="@+id/flMoviesByGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:layout_below="@id/tabLayoutGenre"
                android:paddingTop="@dimen/margin_medium_3"
                android:paddingBottom="@dimen/margin_large">

                <include
                    android:id="@+id/vpMovieByGenre"
                    layout="@layout/view_pod_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flMoviesByGenres"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/lbl_showcases"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreShowCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_more_showcases"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_alignBaseline="@id/tvShowCaseLabel"
                android:layout_alignParentEnd="true"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowCases"
                android:layout_below="@id/tvShowCaseLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:paddingEnd="@dimen/margin_medium_2"
                android:clipToPadding="false"/>

            <include
                android:id="@+id/vpActorsList"
                layout="@layout/view_pod_actor_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvShowCases"
                android:layout_marginTop="@dimen/margin_medium_3"/>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>